--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,12 @@
 # --- Simulation Outputs ---
 # Icarus Verilog compiled executables
-core_sim
-fetch_sim
 sim_*
+*_sim
 *.out
 
 # Waveform data (Value Change Dump)
 *.vcd
-# GTKWave save files (optional, remove if you want to share views)
+# GTKWave save files 
 *.gtkw
 
 # --- Software Build Files ---
